Reorganized scripts attaching and added JS polyfills

--- a/app/community_views/shared/_head.html.haml
+++ b/app/community_views/shared/_head.html.haml
@@ -18,11 +18,7 @@
 
   %link{:href => "#{platform_context.favicon_image.url}", :rel => "shortcut icon"}/
 
-  = render 'shared/raygun/libs'
-  = javascript_include_tag 'jquery.min'
-
-  = render "shared/javascript_assets"
-  = javascript_include_tag 'vendor/modernizr'
+  = render 'shared/javascripts/header'
 
   = csrf_meta_tags
   = yield(:head_bottom)
