--- a/app/community_views/layouts/community.html.haml
+++ b/app/community_views/layouts/community.html.haml
@@ -26,15 +26,6 @@
 
     = render 'shared/footer'
 
-    = render 'shared/components/modal'
-
-    = webpack_manifest_script
-    = webpack_bundle_tag 'common'
-    = webpack_bundle_tag 'community'
-
-    = yield :page_scripts
-    = javascript_include_tag "//maps.googleapis.com/maps/api/js?libraries=places"
-    = render 'layouts/analytics'
     = yield(:body_bottom)
 
-    = render 'shared/raygun/init'
+    = render 'shared/javascripts/footer', entry: 'community', googlemaps: true, analytics: true, include_modal: true
