--- a/app/views/layouts/dashboard.html.haml
+++ b/app/views/layouts/dashboard.html.haml
@@ -22,9 +22,6 @@
     %meta{:content => "black", :name => "apple-mobile-web-app-status-bar-style"}/
     %meta{:content => "chrome=IE7", "http-equiv" => "X-UA-Compatible"}/
 
-    = render 'shared/raygun/libs'
-    = javascript_include_tag 'jquery.min'
-
     = render 'social/social_meta_tags' rescue ''
 
     = yield(:meta)
@@ -38,8 +35,9 @@
 
     = render 'layouts/homepage_css' if home_page?
 
-    = render 'shared/ckeditor_basepath'
-    = render "shared/javascript_assets"
+
+    = render 'shared/javascripts/header'
+
     = yield(:head_bottom)
 
   %body
@@ -61,16 +59,6 @@
     - unless no_footer?
       = render 'layouts/footer'
 
-    = javascript_tag do
-      = javascript_i18n_include_tag
-
-    = javascript_include_tag "//maps.googleapis.com/maps/api/js?libraries=places"
-    = webpack_manifest_script
-    = webpack_bundle_tag 'common'
-    = webpack_bundle_tag 'dashboard'
-
-    = render 'layouts/initializers'
-    = render 'layouts/scripts'
     = yield(:body_bottom)
 
-    = render 'shared/raygun/init'
+    = render 'shared/javascripts/footer', entry: 'dashboard', googlemaps: true, analytics: true, include_modal: true
