--- a/app/views/layouts/instance_wizard.html.haml
+++ b/app/views/layouts/instance_wizard.html.haml
@@ -6,11 +6,10 @@
     %meta{content: "text/html; charset=US-ASCII", "http-equiv" => "Content-type"}
     %meta{content: "width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1", name: "viewport"}
 
-    = render 'shared/raygun/libs'
-    = javascript_include_tag 'jquery.min'
-
     = csrf_meta_tag
     = stylesheet_link_tag 'instance_wizard'
+
+    = render 'shared/javascripts/header'
 
   %body
     .wrapper
@@ -19,8 +18,4 @@
           %p= message
       = yield
 
-    = webpack_manifest_script
-    = webpack_bundle_tag 'common'
-    = webpack_bundle_tag 'instancewizard'
-
-    = render 'shared/raygun/init'
+    = render 'shared/javascripts/footer', entry: 'instancewizard'
