--- a/app/views/shared/javascripts/_ckeditor_basepath.html.erb
+++ b/app/views/shared/javascripts/_ckeditor_basepath.html.erb
@@ -3,8 +3,4 @@
   base_path << Rails.application.config.assets.prefix if Rails.application.config.assets.prefix
   base_path << '/ckeditor/'
 %>
-<script>
-(function(){
-  window.CKEDITOR_BASEPATH = '<%= base_path %>';
-}());
-</script>
+<script>(function(){ window.CKEDITOR_BASEPATH = '<%= base_path %>'; }());</script>
