--- a/app/views/shared/javascripts/raygun/_init.html.erb
+++ b/app/views/shared/javascripts/raygun/_init.html.erb
@@ -1,10 +1,10 @@
 <% if Rails.application.config.raygun_js_reporting %>
-<script type="text/javascript">
+<script>
   rg4js('apiKey', '<%= Rails.application.config.raygun_js_api_key %>');
   rg4js('enableCrashReporting', true);
   rg4js('enablePulse', true);
   rg4js('setVersion', '<%= Rails.application.config.app_version %>');
-  rg4js('options', { ignoreAjaxAbort: true, ignore3rdPartyErrors: true });
+  rg4js('options', { ignoreAjaxAbort: true, ignore3rdPartyErrors: true, allowInsecureSubmissions: true });
   <% if ENV['ASSET_HOST'].present? %>
   rg4js('whitelistCrossOriginDomains', ['<%= URI(ENV['ASSET_HOST']).host %>']);
   <% end %>
@@ -19,4 +19,10 @@
   });
   <% end %>
 </script>
+
+<!--[if IE]>
+<script>
+  rg4js('withTags', ['oldie']);
+</script>
+<![endif]-->
 <% end %>
