NM-3930 Added missing backgrounds to several buttons

--- a/app/views/passwords/new.html.haml
+++ b/app/views/passwords/new.html.haml
@@ -13,7 +13,7 @@
             %span.ico-mail
 
           .actions
-            = f.submit t('reset_password_form.buttons.reset')
+            = f.submit t('reset_password_form.buttons.reset'), class: 'btn btn-green'
 
 - if request.xhr?
   :javascript
