--- a/app/views/registrations/_form.html.haml
+++ b/app/views/registrations/_form.html.haml
@@ -9,4 +9,4 @@
         = render :partial => 'registrations/new_attributes', :locals => { f: f, only_inputs: [field.to_sym], country: @country }
 
   .submit-bar
-    = f.submit "Save", class: "btn medium blue"
+    = f.submit "Save", class: "btn medium btn-green"
