--- a/app/views/passwords/edit.html.haml
+++ b/app/views/passwords/edit.html.haml
@@ -15,5 +15,5 @@
             = f.input :password_confirmation, label: "Confirm Password"
 
             .actions
-              = f.submit t('reset_password_form.buttons.change')
+              = f.submit t('reset_password_form.buttons.change'), class: 'btn btn-green'
 
