--- a/app/views/registrations/_set_password_form.html.haml
+++ b/app/views/registrations/_set_password_form.html.haml
@@ -2,4 +2,4 @@
   = f.input :password, :label => 'Set password', :label => false
 
   .actions
-    = f.submit "Set password"
+    = f.submit "Set password", class: 'btn btn-green'
