--- a/app/views/home/search/_fulltext.liquid
+++ b/app/views/home/search/_fulltext.liquid
@@ -1,3 +1,3 @@
   <div class="{{ transactable_type.calculate_input_size }}">
-    <input class="query" name="query" placeholder="{{ transactable_type.fulltext_placeholder }}" type="text" ></input>
+    <input class="query" name="query" placeholder="{{ transactable_type.fulltext_placeholder }}" type="text" >
   </div>
