HTML encoding fix

--- a/app/views/search/mixed/_pagination.html.haml
+++ b/app/views/search/mixed/_pagination.html.haml
@@ -7,4 +7,4 @@
       of
       = result_count
       results
-    = will_paginate locations, previous_label: '<', next_label: '>'
+    = will_paginate locations, previous_label: '&lt;', next_label: '&gt;'
