NM-4034 adds text to map in mixed view

--- a/app/views/search/mixed.html.haml
+++ b/app/views/search/mixed.html.haml
@@ -43,7 +43,7 @@
     .map
       %section#map.google-map-wrapper
         .google-map
-          #listings_map.inner
+          #listings_map.inner{ 'data-update-text' => t('search.update_map')}
     .list{:'data-list' => true}
       .filters{:'data-search-filters-container' => true}
         -if current_instance.service_types.searchable.many?
