--- a/app/views/locations/_booking_module_call_to_actions.html.liquid
+++ b/app/views/locations/_booking_module_call_to_actions.html.liquid
@@ -6,7 +6,7 @@
   {% endif %}
   <div class="row-fluid booking-submit-row">
     {% if listing.action_free_booking? %}
-      <div class="hiden"><input type="submit" data-disable-with="{{ 'general.processing' | translate }}" value="{{ 'reservations.book' | translate }}" {% for prop in book_hash %} {{prop[0]}}="{{prop[1]}}"{% endfor %}></div>
+      <div class="hidden"><input type="submit" data-disable-with="{{ 'general.processing' | translate }}" value="{{ 'reservations.book' | translate }}" {% for prop in book_hash %} {{prop[0]}}="{{prop[1]}}"{% endfor %}></div>
     {% else %}
       <input type="submit" data-disable-with="{{ 'general.processing' | translate }}" value="{{ 'reservations.book' | translate }}" {% for prop in book_hash %} {{prop[0]}}="{{prop[1]}}"{% endfor %}>
     {% endif %}
