'Click to call' using Twilo communication API

--- a/app/frontend/stylesheets/sections/_locations.scss
+++ b/app/frontend/stylesheets/sections/_locations.scss
@@ -384,6 +384,19 @@ section.listings {
     }
   }
 
+  .click-to-call {
+    margin-left: 15px;
+
+    a {
+      text-align: center;
+      line-height: 50px;
+
+      width: 100%;
+      height: 50px;
+      border-radius: 5px;
+    }
+  }
+
   .favorite {
     margin-left: 15px;
 
