--- a/app/new_ui_views/dashboard/notification_preferences/edit.html.haml
+++ b/app/new_ui_views/dashboard/notification_preferences/edit.html.haml
@@ -6,8 +6,12 @@
 = dashboard_simple_form_for @user, url: dashboard_notification_preferences_path, method: :put, html: { multipart: true, id: 'edit_notification_preferences', data: { :"notification-preferences" => true } } do |f|
   .panel
     .panel-body
-      = f.input :accept_emails, as: :switch
-      = f.input :sms_notifications_enabled, as: :switch
+      - if HiddenUiControls.find('dashboard/notification_preferences/emails').visible?
+        = f.input :accept_emails, as: :switch
+      - if HiddenUiControls.find('dashboard/notification_preferences/sms').visible?
+        = f.input :sms_notifications_enabled, as: :switch
+      - if HiddenUiControls.find('dashboard/notification_preferences/click_to_call').visible?
+        = f.input :click_to_call, as: :switch
 
   .panel.form-actions
     .panel-body
