NM-4038 fixes for shippo rental

--- a/app/frontend/stylesheets/sections/_sections.scss
+++ b/app/frontend/stylesheets/sections/_sections.scss
@@ -10,6 +10,7 @@
 @import "partner_inquiries";
 @import "payments_transfers";
 @import "registrations";
+@import "reservations";
 @import "schedule";
 @import "sign-up";
 @import "space-wizard";
