--- a/app/new_ui_views/listings/reservations/review.html.haml
+++ b/app/new_ui_views/listings/reservations/review.html.haml
@@ -12,23 +12,22 @@
         = render 'listings/reservations/fields', :f => f
         = f.input :delivery_type, as: :hidden
         - if @reservation_request.with_delivery?
-          = f.simple_fields_for :reservation, @reservation do |r|
-            = r.simple_fields_for :shipments do |s|
-              = s.simple_fields_for :shipping_address do |a|
-                = a.input :user_id, as: :hidden, value: current_user.id
-                = a.input :shippo_id, as: :hidden
-                = a.input :name, as: :hidden
-                = a.input :company, as: :hidden
-                = a.input :street1, as: :hidden
-                = a.input :street2, as: :hidden
-                = a.input :city, as: :hidden
-                = a.input :zip, as: :hidden
-                = a.input :state, as: :hidden
-                = a.input :phone, as: :hidden
-                = a.input :email, as: :hidden
-                = a.input :country, as: :hidden
-              = s.input :is_insured, as: :hidden
-              = s.input :direction, as: :hidden
+          = f.simple_fields_for :shipments do |s|
+            = s.simple_fields_for :shipping_address do |a|
+              = a.input :user_id, as: :hidden, value: current_user.id
+              = a.input :shippo_id, as: :hidden
+              = a.input :name, as: :hidden
+              = a.input :company, as: :hidden
+              = a.input :street1, as: :hidden
+              = a.input :street2, as: :hidden
+              = a.input :city, as: :hidden
+              = a.input :zip, as: :hidden
+              = a.input :state, as: :hidden
+              = a.input :phone, as: :hidden
+              = a.input :email, as: :hidden
+              = a.input :country, as: :hidden
+            = s.input :is_insured, as: :hidden
+            = s.input :direction, as: :hidden
         - if @reservation_request.errors.present?
           .flash.error
             %p= t 'reservations_review.errors.whoops'
