Unique event names scoped to nearme namespace

--- a/app/new_ui_views/dashboard/company/analytics/show.html.haml
+++ b/app/new_ui_views/dashboard/company/analytics/show.html.haml
@@ -18,4 +18,4 @@
 = yield :analytics_pagination
 
 - content_for :domready do
-  $(document).trigger('linechart.dnm', ['#chart', #{@chart.values.to_json.html_safe}, #{@chart.labels.to_json.html_safe}]);
+  $(document).trigger('line:chart.nearme', ['#chart', #{@chart.values.to_json.html_safe}, #{@chart.labels.to_json.html_safe}]);
