--- a/app/new_ui_views/dashboard/company/dimensions_templates/create.js.erb
+++ b/app/new_ui_views/dashboard/company/dimensions_templates/create.js.erb
@@ -1,5 +1,5 @@
 (function($){
-  $('html').trigger('hide.dialog');
+  $(document).trigger('hide:dialog.nearme');
 
   var
     select = $('#select_instance_dimensions_template')[0].selectize;
