--- a/app/new_ui_views/dashboard/company/locations/_form.html.haml
+++ b/app/new_ui_views/dashboard/company/locations/_form.html.haml
@@ -17,4 +17,4 @@
     = f.submit t('locations.save_location')
 
 :javascript
-  $(document).trigger('init.limiter', ['[data-add-edit-location-form] [data-counter-limit]']);
+  $(document).trigger('init:limiter.nearme', ['[data-add-edit-location-form] [data-counter-limit]']);
