--- a/app/new_ui_views/dashboard/company/locations/create.js.erb
+++ b/app/new_ui_views/dashboard/company/locations/create.js.erb
@@ -1,7 +1,7 @@
 (function($){
   'use strict';
 
-  $('html').trigger('hide.dialog');
+  $(document).trigger('hide:dialog.nearme');
 
   var
     select = $('[data-location-field]')[0].selectize,
