--- a/app/new_ui_views/dashboard/photos/_resize_form.html.haml
+++ b/app/new_ui_views/dashboard/photos/_resize_form.html.haml
@@ -16,4 +16,4 @@
 
 
   :javascript
-    $(document).trigger('photomanipulator.dnm', ['#crop-form'])
+    $(document).trigger('init:photomanipulator.nearme', ['#crop-form'])
