--- a/app/new_ui_views/dashboard/shipping_categories/_shipping_category_form.html.haml
+++ b/app/new_ui_views/dashboard/shipping_categories/_shipping_category_form.html.haml
@@ -17,4 +17,4 @@
     = submit_tag t('manage.buy_sell.shipping_profiles.save')
 
 :javascript
-  $(document).trigger('init.shippingprofilescontroller');
+  $(document).trigger('init:shippingprofilescontroller.nearme');
