--- a/app/new_ui_views/listings/reservations/_remote_payment_modal.html.haml
+++ b/app/new_ui_views/listings/reservations/_remote_payment_modal.html.haml
@@ -1,3 +1,3 @@
 - content_for :domready do
   - if params[:action] == 'remote_payment'
-    $(document).trigger('load.modal', ['#{remote_payment_listing_reservation_path(@reservation.listing, @reservation)}']);
+    $(document).trigger('load:modal.nearme', ['#{remote_payment_listing_reservation_path(@reservation.listing, @reservation)}']);
