--- a/app/views/buy_sell_market/checkout/payment.html.haml
+++ b/app/views/buy_sell_market/checkout/payment.html.haml
@@ -29,4 +29,4 @@
 
 
 - content_for :domready do
-  $(document).trigger('init.phonenumberfieldsform', 'body');
+  $(document).trigger('init:phonenumberfieldsform.nearme', 'body');
