--- a/app/views/buy_sell_market/support/tickets/new.html.haml
+++ b/app/views/buy_sell_market/support/tickets/new.html.haml
@@ -15,5 +15,5 @@
   - if request.xhr?
     :javascript
       $(function() {
-        $(document).trigger('init.modalform', ['#rfq']);
+        $(document).trigger('init:modalform.nearme', ['#rfq']);
       });
