--- a/app/views/dashboard/company/locations/_form.html.haml
+++ b/app/views/dashboard/company/locations/_form.html.haml
@@ -13,6 +13,6 @@
       = f.submit t('locations.save_location'), id: 'submit-link', class: "btn blue pull-right"
 
 :javascript
-  $(document).trigger('init.selectpicker');
-  $(document).trigger('init.bootstrapswitch');
-  $(document).trigger('init.locationform');
+  $(document).trigger('init:selectpicker.nearme');
+  $(document).trigger('init:bootstrapswitch.nearme');
+  $(document).trigger('init:locationform.nearme');
