--- a/app/views/dashboard/company/locations/create.js.haml
+++ b/app/views/dashboard/company/locations/create.js.haml
@@ -1,4 +1,4 @@
-$(document).trigger('close.modal');
+$(document).trigger('close:modal.nearme');
 $('#location-list').prepend('#{escape_javascript( render @location )}');
 $("body").prepend('#{escape_javascript( render 'shared/render_flash')}');
 
