--- a/app/views/dashboard/company/merchant_accounts/_stripe_connect.html.haml
+++ b/app/views/dashboard/company/merchant_accounts/_stripe_connect.html.haml
@@ -100,4 +100,4 @@
   = f.submit 'Save', class: 'btn medium blue'
 
 - content_for :domready do
-  $(document).trigger('init.stripeconnectcontroller');
+  $(document).trigger('init:stripeconnectcontroller.nearme');
