--- a/app/views/dashboard/company/support/ticket_message_attachments/edit.html.haml
+++ b/app/views/dashboard/company/support/ticket_message_attachments/edit.html.haml
@@ -17,5 +17,5 @@
         = f.submit 'Save', class: 'btn blue pull-right'
 
 :javascript
-  $(document).trigger('init.custominputs')
-  $(document).trigger('init.supportattachmentform')
+  $(document).trigger('init:custominputs.nearme')
+  $(document).trigger('init:supportattachmentform.nearme')
