--- a/app/views/dashboard/layout/_users.html.haml
+++ b/app/views/dashboard/layout/_users.html.haml
@@ -7,5 +7,5 @@
 - content_for :script do
   :javascript
     $(function() {
-      $(document).trigger('init.dashboardcontroller');
+      $(document).trigger('init:dashboardcontroller.nearme');
     });
