--- a/app/views/listings/_listing_form.html.haml
+++ b/app/views/listings/_listing_form.html.haml
@@ -86,7 +86,7 @@
             = render 'dashboard/seller_attachments/attachment', attachment: attachment
 
     - content_for :domready do
-      $(document).trigger('init.sellerattachmentaccesslevelselector');
+      $(document).trigger('init:sellerattachmentaccesslevelselector.nearme');
 
 
 - if only_inputs.empty? || only_inputs.include?(:quantity)
