--- a/app/views/listings/booking_module.html.haml
+++ b/app/views/listings/booking_module.html.haml
@@ -169,4 +169,4 @@
     .clearfix
 
 %script
-  $(document).trigger('init.bookingscontroller', ["#booking-module-#{@listing.id}"]);
+  $(document).trigger('init:bookingscontroller.nearme', ["#booking-module-#{@listing.id}"]);
