--- a/app/views/listings/recurring_bookings/review.html.haml
+++ b/app/views/listings/recurring_bookings/review.html.haml
@@ -60,7 +60,7 @@
   = javascript_include_tag "https://js.stripe.com/v1/"
   :javascript
     $(function() {
-      $(document).trigger('init.phonenumberfieldsform', 'form.payment', {
+      $(document).trigger('init:phonenumberfieldsform.nearme', 'form.payment', {
         countrySelector : '#reservation_request_country_name',
         mobileSelector  : '#reservation_request_mobile_number',
         phoneSelector   : '#reservation_request_phone',
