--- a/app/views/listings/reservations/address.html.haml
+++ b/app/views/listings/reservations/address.html.haml
@@ -46,7 +46,7 @@
       function toggleAddressForm(elem) {
         if(elem.val() == 'delivery'){
           $('#shipping-address').show();
-          $(document).trigger('init.bootstrapswitch');
+          $(document).trigger('init:bootstrapswitch.nearme');
           return;
         }
 
