--- a/app/views/registrations/_signup_form.html.haml
+++ b/app/views/registrations/_signup_form.html.haml
@@ -71,7 +71,7 @@
 - if request.xhr?
   :javascript
     $(function() {
-      $(document).trigger('init.signupform');
-      $(document).trigger('init.custominputs');
+      $(document).trigger('init:signupform.nearme');
+      $(document).trigger('init:custominputs.nearme');
     });
 
