--- a/app/views/search/list.html.haml
+++ b/app/views/search/list.html.haml
@@ -26,4 +26,4 @@
     = render 'search/footer'
 
 - content_for :domready do
-  $(document).trigger('init.searchresults');
+  $(document).trigger('init:searchresults.nearme');
