--- a/app/views/search/listing_mixed.html.haml
+++ b/app/views/search/listing_mixed.html.haml
@@ -95,4 +95,4 @@
   = yield :mixed_locations
 
 - content_for :domready do
-  $(document).trigger('initmixed.searchresults');
+  $(document).trigger('init:mixed:searchresults.nearme');
