--- a/app/views/search/products.html.haml
+++ b/app/views/search/products.html.haml
@@ -74,4 +74,4 @@
 
 
   - content_for :domready do
-    $(document).trigger('initproducts.searchresults');
+    $(document).trigger('init:products:searchresults.nearme');
