--- a/app/views/search/products_list.html.haml
+++ b/app/views/search/products_list.html.haml
@@ -38,4 +38,4 @@
                 = t('buy_sell_market.products.search_results.product_could_not_be_found')
 
 - content_for :domready do
-  $(document).trigger('initproductslist.searchresults');
+  $(document).trigger('init:productslist:searchresults.nearme');
