--- a/app/views/search/products_table.html.haml
+++ b/app/views/search/products_table.html.haml
@@ -30,6 +30,6 @@
       = render 'shared/loading_spinner'
 
 - content_for :domready do
-  $(document).trigger('initproductstable.searchresults');
+  $(document).trigger('init:productstable:searchresults.nearme');
 
 
