--- a/app/views/shared/components/_wish_list_button.html.liquid
+++ b/app/views/shared/components/_wish_list_button.html.liquid
@@ -13,4 +13,4 @@
   </a>
 </div>
 
-<script>$(document).trigger('init.favoritebutton', $("#favorite-{{ object | dom_id }}"));</script>
+<script>$(document).trigger('init:favoritebutton.nearme', $("#favorite-{{ object | dom_id }}"));</script>
