--- a/app/views/support/ticket_message_attachments/edit.html.haml
+++ b/app/views/support/ticket_message_attachments/edit.html.haml
@@ -20,6 +20,6 @@
 .clearfix
 
 :javascript
-  $(document).trigger('init.custominputs');
-  $(document).trigger('init.supportattachmentform');
+  $(document).trigger('init:custominputs.nearme');
+  $(document).trigger('init:supportattachmentform.nearme');
 
