--- a/app/views/dashboard/company/analytics/show.html.haml
+++ b/app/views/dashboard/company/analytics/show.html.haml
@@ -8,4 +8,4 @@
     = render :partial => "analytics_#{@analytics_mode}"
 
 - content_for :domready do
-  $(document).trigger('linechart.dnm', [$('#chart'), #{@chart.values.to_json.html_safe}, #{@chart.labels.to_json.html_safe}]);
+  $(document).trigger('line:chart.nearme', [$('#chart'), #{@chart.values.to_json.html_safe}, #{@chart.labels.to_json.html_safe}]);
