--- a/app/views/dashboard/company/dimensions_templates/create.js.haml
+++ b/app/views/dashboard/company/dimensions_templates/create.js.haml
@@ -1,3 +1,3 @@
-$(document).trigger('close.modal');
+$(document).trigger('close:modal.nearme');
 $('.dimensions-templates-select-container').html('#{escape_javascript( render 'shared/rental_dimensions_templates_select' )}');
 setTimeout(function() { $('.dimensions-templates-select-container select').customSelect(); }, 100);
