--- a/app/views/dashboard/user_recurring_bookings/_modals.html.haml
+++ b/app/views/dashboard/user_recurring_bookings/_modals.html.haml
@@ -1,16 +1,16 @@
 - if params[:action] == 'remote_payment'
   = content_for :domready do
-    $(document).trigger('load.modal', ['#{remote_payment_modal_dashboard_user_reservation_path(@reservation, listing_id: @reservation.listing)}']);
+    $(document).trigger('load:modal.nearme', ['#{remote_payment_modal_dashboard_user_reservation_path(@reservation, listing_id: @reservation.listing)}']);
 
 - if params[:reservation_id].present?
   = content_for :domready do
-    $(document).trigger('init.reservationlistcontroller', [$('section#reservations'), #{params[:reservation_id]}]);
+    $(document).trigger('init:reservationlistcontroller.nearme', [$('section#reservations'), #{params[:reservation_id]}]);
 
 - if params[:action] == 'booking_failed'
   = content_for :domready do
-    $(document).trigger('load.modal', ['#{booking_failed_modal_dashboard_user_reservation_path(@reservation, listing_id: @reservation.listing)}'])
+    $(document).trigger('load:modal.nearme', ['#{booking_failed_modal_dashboard_user_reservation_path(@reservation, listing_id: @reservation.listing)}'])
 
 - if params[:action] == 'recurring_booking_successful'
   = content_for :domready do
-    $(document).trigger('load.modal', ['#{recurring_booking_successful_modal_dashboard_user_reservation_path(@recurring_booking, listing_id: @recurring_booking.listing)}']);
+    $(document).trigger('load:modal.nearme', ['#{recurring_booking_successful_modal_dashboard_user_reservation_path(@recurring_booking, listing_id: @recurring_booking.listing)}']);
 
