--- a/app/views/listings/show.html.haml
+++ b/app/views/listings/show.html.haml
@@ -13,7 +13,7 @@
 
 - content_for :domready do
   - if @listing && params[:action] == 'ask_a_question'
-    $(document).trigger('load.modal', ['#{new_listing_user_message_path(@listing)}']);
+    $(document).trigger('load:modal.nearme', ['#{new_listing_user_message_path(@listing)}']);
 
 = content_for :script do
   :javascript
