--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -11,4 +11,4 @@
 
 - if request.xhr?
   :javascript
-    $(document).trigger('setclass.modal', ['sign-up-modal']);
+    $(document).trigger('setclass:modal.nearme', ['sign-up-modal']);
