--- a/app/views/search/mixed.html.haml
+++ b/app/views/search/mixed.html.haml
@@ -99,4 +99,4 @@
   = yield :mixed_locations
 
 - content_for :domready do
-  $(document).trigger('initmixed.searchresults');
+  $(document).trigger('init:mixed:searchresults.nearme');
